src/test/ui/feature-gates/feature-gate-associated_type_bounds.stderr
error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:12:22
   |
LL |     type A: Iterator<Item: Copy>;
   |                      ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:15:22
   |
LL |     type B: Iterator<Item: 'static>;
   |                      ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:19:20
   |
LL | struct _St1<T: Tr1<As1: Tr2>> {
   |                    ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:26:18
   |
LL | enum _En1<T: Tr1<As1: Tr2>> {
   |                  ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:33:19
   |
LL | union _Un1<T: Tr1<As1: Tr2>> {
   |                   ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:40:37
   |
LL | type _TaWhere1<T> where T: Iterator<Item: Copy> = T;
   |                                     ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:43:22
   |
LL | fn _apit(_: impl Tr1<As1: Copy>) {}
   |                      ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:45:26
   |
LL | fn _apit_dyn(_: &dyn Tr1<As1: Copy>) {}
   |                          ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:48:24
   |
LL | fn _rpit() -> impl Tr1<As1: Copy> { S1 }
   |                        ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:51:31
   |
LL | fn _rpit_dyn() -> Box<dyn Tr1<As1: Copy>> { Box::new(S1) }
   |                               ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:54:23
   |
LL | const _cdef: impl Tr1<As1: Copy> = S1;
   |                       ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:60:24
   |
LL | static _sdef: impl Tr1<As1: Copy> = S1;
   |                        ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/feature-gate-associated_type_bounds.rs:67:21
   |
LL |     let _: impl Tr1<As1: Copy> = S1;
   |                     ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52662
   = help: add #![feature(associated_type_bounds)] to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/feature-gate-associated_type_bounds.rs:54:14
   |
LL | const _cdef: impl Tr1<As1: Copy> = S1;
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(impl_trait_in_bindings)] to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/feature-gate-associated_type_bounds.rs:60:15
   |
LL | static _sdef: impl Tr1<As1: Copy> = S1;
   |               ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(impl_trait_in_bindings)] to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/feature-gate-associated_type_bounds.rs:67:12
   |
LL |     let _: impl Tr1<As1: Copy> = S1;
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(impl_trait_in_bindings)] to the crate attributes to enable

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0562, E0658.
For more information about an error, try `rustc --explain E0562`.
